index.html initial styling

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Truffle Box</title>
+    <title>Kittygram. Meow 4 lyfe motherfuckers.</title>
   </head>
-  <body>
+  <body class="flex w-100 min-vh-100 bg-black items-center justify-center">
     <div id="root"></div>
     <!--
       This HTML file is a template.
