--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <title>Kittygram. Meow 4 lyfe motherfuckers.</title>
   </head>
-  <body class="flex w-100 min-vh-100 bg-black items-center justify-center">
+  <body class="flex w-100 min-vh-100 items-center justify-center">
     <div id="root"></div>
     <!--
       This HTML file is a template.
