Refactoring positioning styles

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <title>Kittygram. Meow 4 lyfe motherfuckers.</title>
   </head>
-  <body class="flex w-100 min-vh-100 items-center">
+  <body>
     <div class="flex w-100 h-100" id="root"></div>
     <!--
       This HTML file is a template.
