Fixed merge conflicts.

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,9 @@
     -->
     <title>Kittygram. Meow 4 lyfe motherfuckers.</title>
   </head>
-  <body class="flex w-100 min-vh-100 items-center">
+  <body>
     <div class="flex w-100 h-100" id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
