Adding padding to index parent div

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>Kittygram. Meow 4 lyfe motherfuckers.</title>
   </head>
   <body>
-    <div class="flex w-100 h-100 bg-animated-gradient" id="root"></div>
+    <div class="flex w-100 h-100 bg-animated-gradient pa4-ns pa2" id="root"></div>
 
     <!--
       This HTML file is a template.
