--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kittygram. Meow 4 lyfe motherfuckers.</title>
+    <title>Kittygram. Meow 4 lyfe.</title>
   </head>
   <body>
     <div class="flex w-100 h-100 bg-animated-gradient pa4-ns pa2" id="root"></div>
